--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,17 +8,21 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: FTP Deploy using ftp-action
-        uses: sebastianpopp/ftp-action@v1.3.0
+      - name: Deploy via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
         with:
-          host: ${{ secrets.FTP_HOST }}
+          server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
-          port: ${{ secrets.FTP_PORT }}
+          port: ${{ secrets.FTP_PORT || 21 }}
+          protocol: ftp
           local-dir: ./
-          remote-dir: /public_html/
+          server-dir: /public_html/
+          # optionally limit what gets uploaded:
+          # exclude: |
+          #   **/.git*
+          #   **/node_modules/**
