--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@tailwindcss/vite": "^4.1.18",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "gsap": "^3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -21,7 +24,8 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.0.8"
+    "tailwindcss": "^3.4.19",
+    "vite": "^5.0.8",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
